--- a/view/main.html
+++ b/view/main.html
@@ -8,7 +8,7 @@
 
 <body>
     <!-------------------------- ITEM NAME -------------------------->
-        <h1>Item Name</h1>    
+        <h1>Items</h1>    
 
             <strong>Update Item Name</strong>
             <div id="update"></div>
@@ -111,15 +111,29 @@ document.getElementById("submititem").onclick = function(){
                     
                     for(var i = 0; i < resp.length; i++){
 					var pass_div = document.createElement("div");
-                    pass_div.style.border = '4px solid black';
-					pass_div.innerHTML = "<br/> Item Name </br>" + resp[i].name + " <br/><br/> Description <br/>" +  resp[i].description +                                          " <br/> <br/> Price <br/>" + resp[i].price
+                   //var breaky = document.createElement("br");
+                    var namespan = document.createElement("h4");
+                    var desspan = document.createElement("h4");
+                    var pricespan = document.createElement("h4");
+                    pass_div.style.border = '4px solid black';                        
+                    namespan.innerHTML =  resp[i].name; 
+                    desspan.innerHTML =  resp[i].description;
+                    pricespan.innerHTML =  resp[i].price;
+				  //pass_div.innerHTML = "<br/> Item Name </br>" + resp[i].name + " <br/><br/> Description <br/>" +  resp[i].description + "<br/> <br/> Price <br/>" + resp[i].price
 					document.getElementById("all_users").appendChild(pass_div);
-					
+					pass_div.appendChild(namespan);
+                    pass_div.appendChild(desspan);
+                    pass_div.appendChild(pricespan);
+                        
 					//HTML5 DATA!! we put the database id into the div
-					pass_div.dataset.id = resp[i].id;
-					
-					//onclick this div, updates
-					pass_div.onclick = function(){
+					//pass_div.dataset.id = resp[i].id;
+					namespan.dataset.id = resp[i].id;
+                    desspan.dataset.id = resp[i].id;
+                    pricespan.dataset.id = resp[i].id;
+                        
+                        
+////////////////////UPDATE ITEM INFO ONCLICK
+				/*	namespan.onclick = function(){
 					
 					var pass_input = document.createElement("input");
 					pass_input.id = "itemname";
@@ -131,14 +145,47 @@ document.getElementById("submititem").onclick = function(){
 					editDiv = this;
 					//document.getElementById("update_but").dataset.curDiv = this;
 
-					}
+					} */
+                                        
+                    //					
+                    desspan.onclick = function(){
 					
+					var pass_input = document.createElement("input");
+					pass_input.id = "itemdes";
+					pass_input.value = this.innerHTML;
+					document.getElementById("update").innerHTML="";
+					document.getElementById("update").appendChild(pass_input);
+					document.getElementById("update_itemname").dataset.passid = this.dataset.id;
+					
+					editDiv = this;
+					//document.getElementById("update_but").dataset.curDiv = this;
+
+					}
+                    
+                    //					
+                 /*   pricespan.onclick = function(){
+					
+					var pass_input = document.createElement("input");
+					pass_input.id = "itemprice";
+					pass_input.value = this.innerHTML;
+					document.getElementById("update").innerHTML="";
+					document.getElementById("update").appendChild(pass_input);
+					document.getElementById("update_itemname").dataset.passid = this.dataset.id;
+					
+					editDiv = this;
+					//document.getElementById("update_but").dataset.curDiv = this;
+
+					} */
+        
+					
+                    
+////////////////////DELETE!!!!
 					var pass_del = document.createElement("button");
 					pass_del.dataset.id = resp[i].id;
 					pass_del.innerHTML = "Delete";
 					document.getElementById("all_users").appendChild(pass_del);
 					pass_del.onclick = function(){
-					 var pass_id = this.dataset.id;
+					var pass_id = this.dataset.id;
 					 
 					 $.ajax({
 					 	url: "../cont/items_c.php",
@@ -174,12 +221,16 @@ var item_id = this.dataset.passid;
 							data: {
 								method:"update",
 								id: item_id,
-								itemname: document.getElementById("itemname").value
+								itemname: document.getElementById("itemname").value,
+                                itemdes: document.getElementById("itemdes").value,
+                                itemprice: document.getElementById("itemprice").value
 							},
 							type: "POST",
 							success:function(resp){
 								alert("UPDATED!!");
-								editDiv.innerHTML = document.getElementById("itemname").value
+						//		editDiv.innerHTML = document.getElementById("itemname").value
+                                editDiv.innerHTML = document.getElementById("itemdes").value
+                        //      editDiv.innerHTML = document.getElementById("itemprice").value
 							}
 						}); //ajax close
 } //update_but onclick close
