--- a/view/main.html
+++ b/view/main.html
@@ -7,6 +7,29 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 <body>
+    
+<input type='text' id='username' placeholder='username' />
+<input type='text' id='password' placeholder='password' />
+<button id='sub'>Login</button>
+
+<input type='text' id='message' placeholder='Type da msg' />
+<button id='msg_sub'>Submit Message</button>
+
+
+
+ <!--       <div>
+            <span id='{{myid}}'>{{hi}}</span>
+            <div ng-repeat="blah in msgs">
+                <span>{{blah.username}}</span> : 
+                <span>{{blah.message}}</span> - 
+                <span>{{blah.likeNum}} <img height='25' src="http://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/102011/like_icon.png?itok=nkurUMlZ" /></span>
+                <button ng-click="clickFunc(blah.msg_id)">Like!</button>
+            </div>
+        </div>  -->
+    
+    
+    
+    
     <!-------------------------- ITEM NAME -------------------------->
         <h1>Items</h1>    
 
@@ -67,6 +90,53 @@
 </body>
 
 <script>
+        
+ 
+    $(document).ready(function(){
+        var user_id = -1;
+        //modify our files a little bit later
+        document.getElementById("sub").onclick = function(){
+            //connect and insert
+            $.ajax({
+                url:"../cont/username_c.php",
+                type:"post",
+                dataType:"json",
+                data: {
+                    method:"login",
+                    username: document.getElementById("username").value,
+                    password: document.getElementById("password").value
+                },
+                success:function(resp){
+                    alert(resp[0].id);
+                    console.log(resp);
+                    user_id = resp[0].id;
+                }
+            });
+        }
+
+        document.getElementById("msg_sub").onclick = function(){
+             $.ajax({
+                url:"controller/message.php",
+                type:"post",
+                dataType:"json",
+                data: {
+                    method:"insert",
+                    user_id: user_id,
+                    msg: document.getElementById("message").value
+                },
+                success:function(resp){
+                    alert("Logged in!");
+                    console.log(resp);
+                    user_id = resp[0].id;
+                    sessionStorage.id = resp[0].id;
+                }
+            });
+
+        }
+    });
+ 
+    
+    
 $(document).ready(function(){
 
 ////////////////////////////////////////////////////////////  ITEM NAME   ////////////////////////////////////////////////////////////
