--- a/view/main.html
+++ b/view/main.html
@@ -4,16 +4,44 @@
 <title>Cel's Storage</title>
 </head>
 
+<style>
+        body {
+        background-image: url("http://www.thirumuraifestivallondon2014.com/wp-content/uploads/2014/06/flower-background-designs-free-download.jpg");
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+        }    
+    
+    .container {
+        margin: auto;
+        text-align: center;
+    }
+    
+    
+   span{
+    display: inline-block;
+    width: 70px;   
+    text-align: left;
+}
+    
+    input {
+      display: inline-block;
+    }
+    
+</style>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 <body>
 
+<div class="container">
     <!-------------------------- Register Form -------------------------->
     <h3>User Registration</h3>
     <span>Username:</span>
     <input type='text' id='name' placeholder='username' /> <br/>
     <span>Password:</span>
-    <input type='text' id='pass' placeholder='password' /> <br/>
+    <input type='password' id='pass' placeholder='password' /> <br/>
     <span>Address:</span>
     <input type='text' id='add' placeholder='address' /> <br/>
     <span>Phone:</span>
@@ -30,7 +58,7 @@
     <span>Username:</span>
     <input type='text' id='username' placeholder='username' /> <br/>
     <span>Password:</span>
-    <input type='text' id='password' placeholder='password' /> <br/>
+    <input type='password' id='password' placeholder='password' /> <br/>
     <button id='sub'>Login</button>
     
     <br/>
@@ -41,7 +69,7 @@
     <span>Username:</span>
     <input type='text' id='udname' placeholder='username' /> <br/>
     <span>Password:</span>
-    <input type='text' id='udpass' placeholder='password' /> <br/>
+    <input type='password' id='udpass' placeholder='password' /> <br/>
     <span>Address:</span>
     <input type='text' id='udadd' placeholder='address' /> <br/>
     <span>Phone:</span>
@@ -73,7 +101,7 @@
         <strong>View Items</strong>
         <div id="all_users"></div>
 
- 
+    </div>
 </body>
 
 <script>
@@ -200,7 +228,9 @@ document.getElementById("submititem").onclick = function(){
                     var pricespan = document.createElement("h4");
                     var username = document.createElement("h4");
                         
-                    pass_div.style.border = '4px solid black';      
+                    pass_div.style.border = '4px solid black';   
+                    pass_div.style.width = '550px';     
+                    pass_div.style.margin = 'auto';     
                     username.innerHTML =  resp[i].username; 
                     namespan.innerHTML =  resp[i].name; 
                     desspan.innerHTML =  resp[i].description;
