--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,12 @@
 <style>
+    body {
+        background-image: url("http://www.thirumuraifestivallondon2014.com/wp-content/uploads/2014/06/flower-background-designs-free-download.jpg");
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    
+    
     #container {
     margin: auto;
     text-align: center;        
@@ -29,16 +37,18 @@
         <a href="#/userP"><button>User Data</button></a>
         <button ng-click="logout()">Log Out</button>
         
+        <div ng-controller="imgCtrl" ng-init="getAll()">
+            <div style="margin: auto; margin-top: 3%; width: 80%; background-color: rgba(255,255,255,0.8)" ng-repeat="image in images">
+                <h3>{{image.title}}</h3>
+                <img width="50%" ng-src="{{image.path}}" />
+                <p>Posted by {{image.username}}</p>
+                <p><a href="#/detail/{{image.id}}">See More</a></p>
+            </div>
+        </div>
+        
     </div>
 </div>
-<div ng-controller="imgCtrl" ng-init="getAll()">
-    <div style="margin: auto; margin-top: 3%; width: 80%; border: 0.5px solid" ng-repeat="image in images">
-        <h3>{{image.title}}</h3>
-        <img width="50%" ng-src="{{image.path}}" />
-        <p>Posted by {{image.username}}</p>
-        <p><a href="#/detail/{{image.id}}">See More</a></p>
-    </div>
-</div>
+
 
 </div>
 
