Added 'Login' button to signUp.html

--- a/views/signUp.html
+++ b/views/signUp.html
@@ -17,5 +17,8 @@ Address: <input ng-model="sa" type='text' id='add' placeholder='Address here' />
 Phone: <input ng-model="sph" type='text' id='phone' placeholder='Phone here' /> <br/>
 Email: <input ng-model="se" type='text' id='email' placeholder='Email here' /> <br/>
 <button ng-click="signup(su,sp,sa,sph,se)">Sign Up</button>
+<br/>
+<br/>    
+<a href="#/home"><button>Already a member? Login here!</button></a>
     
 </div>
