--- a/views/signUp.html
+++ b/views/signUp.html
@@ -11,11 +11,11 @@
 <div id="container">
 
 <h1> Become a Floral Diary member today!</h1>
-Username: <input ng-model="su" type="text" placeholder='Username here' /> <br/>
-Password: <input ng-model="sp" type="password" placeholder='Password here' /> <br/>
-Address: <input ng-model="sa" type='text' id='add' placeholder='Address here' /> <br/>
-Phone: <input ng-model="sph" type='text' id='phone' placeholder='Phone here' /> <br/>
-Email: <input ng-model="se" type='text' id='email' placeholder='Email here' /> <br/>
+<input ng-model="su" type="text" placeholder='Username here' /> <br/>
+<input ng-model="sp" type="password" placeholder='Password here' /> <br/>
+<input ng-model="sa" type='text' id='add' placeholder='Address here' /> <br/>
+<input ng-model="sph" type='text' id='phone' placeholder='Phone here' /> <br/>
+<input ng-model="se" type='text' id='email' placeholder='Email here' /> <br/>
 <button ng-click="signup(su,sp,sa,sph,se)">Sign Up</button>
 <br/>
 <br/>    
