Added Like visual only so far, and renamed to UserData

--- a/views/home.html
+++ b/views/home.html
@@ -18,7 +18,7 @@
         Image <br/> <input type="file" id="imgFile"/><br/><br/>
         <button id="upload">Post</button> <br/><br/>
         
-        <a href="#/userP"><button>User Data</button></a>
+        <a href="#/userd"><button>User Data</button></a>
         <button ng-click="logout()">Log Out</button>
         
         <div ng-controller="imgCtrl" ng-init="getAll()">
