--- a/views/detail.html
+++ b/views/detail.html
@@ -1,9 +1,16 @@
 <a href="#/home"><button>Back</button></a>
 <div ng-controller="imgCtrl" ng-init="getImage()">
     <h1>{{imgD.title}}</h1>
-    <img ng-src="{{imgD.path}}" width="100%;"/>
+    <img ng-src="{{imgD.path}}" width="50%;"/>
+    <br/><br/>
+    
+    <!-- Likes -->
+    <img height='25' src="http://www.aguainmaculada.com/path/official-facebook-logo-like.png"/>
+    <span>{{blah.likeNum}}</span>
+    <button ng-click="clickFunc(blah.msg_id)">Like!</button> 
+    
     <p>Description: {{imgD.description}}</p>
-    <p>Post by: {{imgD.username}}</p>
+    <p>Posted by: {{imgD.username}}</p>
 </div>
 <div ng-controller="commCtrl" ng-init="getImgComm()">
     <div ng-repeat="comm in comms">
