Likes number shows, just needed to refresh.

--- a/views/detail.html
+++ b/views/detail.html
@@ -6,8 +6,8 @@
     
     <!-- Likes -->
     <img height='25' src="http://www.aguainmaculada.com/path/official-facebook-logo-like.png"/>
-    <span>{{blah.likeNum}}</span>
-    <button ng-click="clickFunc(blah.msg_id)">Like!</button> 
+    <span>{{imgD.likeNum}}</span>
+    <button ng-click="clickFunc(imgD.msg_id)">Like!</button> 
     
     <p>Description: {{imgD.description}}</p>
     <p>Posted by: {{imgD.username}}</p>
