Added price to display with respective images

--- a/views/home.html
+++ b/views/home.html
@@ -27,6 +27,7 @@
                 <h3>{{image.title}}</h3>
                 <img width="50%" ng-src="{{image.path}}" />
                 <p>Posted by {{image.username}}</p>
+                <p>Price: ${{image.price}}</p>
                 <p><a href="#/detail/{{image.id}}">See More</a></p>
             </div>
         </div>
