Added price to See More

--- a/views/detail.html
+++ b/views/detail.html
@@ -11,6 +11,7 @@
     
     
     <p>Description: {{imgD.description}}</p>
+    <p>Price: ${{imgD.price}}</p>
     <p>Posted by: {{imgD.username}}</p>
 </div>
 <div ng-controller="commCtrl" ng-init="getImgComm()">
