--- a/views/userdata.html
+++ b/views/userdata.html
@@ -27,7 +27,7 @@
         <tr ng-repeat="comm in userComms">
             <td>{{comm.title}}</td>
             <td>{{comm.imageid}}</td>
-            <td><input ng-model="comment" type="text" value="{{comm.text}}"></td>
+            <td><input type="text" value="{{comm.text}}"></td>
             <td><button ng-click="delCom(comm.imageid, comm.text)">Delete</button></td>
         </tr>
         
